eks-cluster-ec2/k8s-files/ingress/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
  labels:
    run: app
spec:
  rules:
 # - host: example.com
   - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: blue-service
              port:
                number: 8000
